added Maksym's rewrited notebooks

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c19dfce",
+   "id": "3b10e434",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9073f07",
+   "id": "8231055e",
    "metadata": {},
    "source": [
     "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 01: Load, Engineer & Connect</span>\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4bcb4818",
+   "id": "32a7d8ed",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8077f0d8",
+   "id": "41bfcdea",
    "metadata": {},
    "source": [
     "> Using `hdfs` we can get **project name** using `hdfs.project_name()` method and **project path** using `hdfs.project_path()` method."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d784eb43",
+   "id": "08324fb6",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68bd7414",
+   "id": "9692237b",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb8a998",
+   "id": "f741d265",
    "metadata": {},
    "source": [
     "---\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce21e6a",
+   "id": "2e7df2d0",
    "metadata": {},
    "source": [
     "## <span style=\"color:#ff5f27;\"> 💽 Loading Data </span>"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "670e1fcb",
+   "id": "2e946afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3d4e767",
+   "id": "8229b7c5",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "008dabae",
+   "id": "21816009",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "293df819",
+   "id": "1ab9a103",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a5e6a3",
+   "id": "36615e5b",
    "metadata": {},
    "source": [
     "---\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aec118b9",
+   "id": "799aa405",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0b5b25a",
+   "id": "d9633bf7",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ec8ee59a",
+   "id": "97a40fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66a28e7",
+   "id": "dbadc1b9",
    "metadata": {},
    "source": [
     "Up to this point we have just created the metadata object representing the feature group. However, we haven't saved the feature group in the feature store yet. To do so, we can call the method `insert` on the metadata object created in the cell above."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24fa2415",
+   "id": "08369103",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c46f8d9",
+   "id": "6d593f62",
    "metadata": {},
    "source": [
     "#### <span style=\"color:#ff5f27;\">⛳️ Sales Dataset</span>\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "27c4ec11",
+   "id": "64ac1ac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "682a6a82",
+   "id": "77e0844f",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "275c1fd6",
+   "id": "db42830b",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6468b257",
+   "id": "abed4847",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e0b40b",
+   "id": "a711d716",
    "metadata": {},
    "source": [
     "When creating a feature group we can also specify a `partition key`. Partition keys help organize the feature data on the file system and improve performances when reading the feature group data. As for the `primary key`, also `partition key` can be a composite one."
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e344a83f",
+   "id": "531814cb",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ae1b109",
+   "id": "f93ac38c",
    "metadata": {},
    "source": [
     "You can enable a feature group to be online by setting the `online_enabled` flag to true. \n",
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e294ac86",
+   "id": "f508d8df",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a662d966",
+   "id": "c2d263ca",
    "metadata": {},
    "source": [
     "#### <span style=\"color:#ff5f27;\">⛳️ Exogenous Dataset </span>\n",
@@ -1196,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1c889599",
+   "id": "256d0ed0",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c9fa5f6b",
+   "id": "f818c0c6",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed7269a",
+   "id": "fbd43fe4",
    "metadata": {},
    "source": [
     "---\n",
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d5b04785",
+   "id": "c99f52d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c73461b3",
+   "id": "ad4a6428",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06f4fab",
+   "id": "03737cbe",
    "metadata": {},
    "source": [
     "This will also recompute statistics after inserting new data. The new statistics will be saved along the metadata with a new commit time."
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766fb540",
+   "id": "7a1e98c6",
    "metadata": {},
    "source": [
     "---\n",
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "59664049",
+   "id": "2c70a8d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "46547a11",
+   "id": "fad2e203",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7138fc4e",
+   "id": "d6fce5fc",
    "metadata": {},
    "source": [
     "---\n",
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "17d2fb01",
+   "id": "04718210",
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "77fe82a7",
+   "id": "0c9e397a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db743f72",
+   "id": "752f25c8",
    "metadata": {},
    "source": [
     "---\n",
@@ -1577,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1591,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
