--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fffbcdc0",
+   "id": "8432191a",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fa6bdf",
+   "id": "bc587dc9",
    "metadata": {},
    "source": [
     "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 03: Training Data & Feature views</span>\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22eea388",
+   "id": "3ec59788",
    "metadata": {},
    "source": [
     "---\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "506596f4",
+   "id": "a1ef190d",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa57a6c",
+   "id": "34e9aa5c",
    "metadata": {},
    "source": [
     "---"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0180b064",
+   "id": "997d01a0",
    "metadata": {},
    "source": [
     "## <span style=\"color:#ff5f27;\">⚙️ Feature View Creation</span>\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "565ca818",
+   "id": "97963f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4afb93f2",
+   "id": "076c263a",
    "metadata": {},
    "source": [
     "In order to create Feature View we can use `FeatureStore.create_feature_view()` method."
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2e6d0ab",
+   "id": "f50f6e23",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e722b827",
+   "id": "89861e34",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dffbe1d",
+   "id": "acdf032c",
    "metadata": {},
    "source": [
     "For now `Feature View` is saved in Hopsworks and we can retrieve it using `FeatureStore.get_feature_view()`"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b4981ee",
+   "id": "1d42a5eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e66b67b5",
+   "id": "cd85a683",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2221f14",
+   "id": "2615c864",
    "metadata": {},
    "source": [
     "> `FeatureView.preview_feature_vector()` returns a sample of assembled serving vector from online feature store"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a3241447",
+   "id": "767b3ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000a93d4",
+   "id": "a5fd4481",
    "metadata": {},
    "source": [
     "> To get subset of data use `FeatureView.get_batch_data()` "
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf6de28b",
+   "id": "3f8bc441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b7c3eede",
+   "id": "643e2193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "637ad4ad",
+   "id": "f9c991cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa1840b",
+   "id": "84281acd",
    "metadata": {},
    "source": [
     "---\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a9125de1",
+   "id": "9c785423",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ae226cb",
+   "id": "6c5440a1",
    "metadata": {},
    "source": [
     "### <span style=\"color:#ff5f27;\">🧑🏻‍🔬 Dataset with splits</span>\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "206e68a1",
+   "id": "674668fa",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "37a2ae17",
+   "id": "6a673d6b",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d369b06c",
+   "id": "ab350857",
    "metadata": {},
    "source": [
     "---\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8aa0c262",
+   "id": "2b5d3d7e",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3bd7df96",
+   "id": "8b2a70c1",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a123df00",
+   "id": "705a8181",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be77064",
+   "id": "a1808b74",
    "metadata": {},
    "source": [
     "---\n",
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "111fc770",
+   "id": "5893ec5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5a1d480d",
+   "id": "9098ff94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "82048c93",
+   "id": "9cdb35f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ab0885f8",
+   "id": "11b4fd63",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e2b89e1a",
+   "id": "786f77db",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3e21957e",
+   "id": "8387207e",
    "metadata": {},
    "outputs": [
     {
@@ -921,13 +921,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed306b63",
+   "id": "64d223ce",
    "metadata": {},
    "source": [
     "---\n",
     "## <span style=\"color:#ff5f27;\"> 🪝 Training Dataset retreival </span>\n",
     "\n",
-    "To retrieve training dataset from Feature Store we can use `get_training_dataset_splits()` or `get_training_dataset()` methods. \n",
+    "To retrieve training dataset from Feature Store we can use `get_training_data()` methods. \n",
     "\n",
     "If version is not provided - new one will be created.\n",
     "If version is provided and version exists - retrieves trainining dataset and returns as dataframe."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fe3814ce",
+   "id": "d95b8a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6e2a9680",
+   "id": "131cf2c4",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d5ac6ab3",
+   "id": "bef8853a",
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7369d1e8",
+   "id": "31c96a19",
    "metadata": {},
    "source": [
     "---"
@@ -1108,7 +1108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1122,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
