--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b10e434",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "title: \"Feature Engineering/Ingestion\"\n",
-    "date: 2021-02-24\n",
-    "type: technical_note\n",
-    "draft: false\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8231055e",
+   "id": "6bed33f8",
    "metadata": {},
    "source": [
     "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 01: Load, Engineer & Connect</span>\n",
     "\n",
-    "<span style=\"font-width:bold;\"> This is the first part of the quick start series of tutorials about Hopsworks Feature Store. As part of this first module, we will work with data related to credit card transactions. \n",
+    "<span style=\"font-width:bold;\"> This is the first part of the quick start series of tutorials about Hopsworks Feature Store. \n",
     "The objective of this tutorial is to demonstrate how to work with the **Hopworks Feature Store**</span>\n",
     "\n",
     "## **🗒️ This notebook is divided in 3 sections:** \n",
@@ -60,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32a7d8ed",
+   "id": "59e7cdd9",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41bfcdea",
+   "id": "f7d0e9fd",
    "metadata": {},
    "source": [
     "> Using `hdfs` we can get **project name** using `hdfs.project_name()` method and **project path** using `hdfs.project_path()` method."
@@ -93,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08324fb6",
+   "id": "a0fba725",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9692237b",
+   "id": "c64e357c",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f741d265",
+   "id": "57069d6a",
    "metadata": {},
    "source": [
     "---\n",
@@ -153,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e7df2d0",
+   "id": "7b48efdd",
    "metadata": {},
    "source": [
     "## <span style=\"color:#ff5f27;\"> 💽 Loading Data </span>"
@@ -162,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2e946afb",
+   "id": "75c91123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8229b7c5",
+   "id": "6c83b1d9",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "21816009",
+   "id": "4618f381",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1ab9a103",
+   "id": "2a1b6320",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36615e5b",
+   "id": "5a96c779",
    "metadata": {},
    "source": [
     "---\n",
@@ -519,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "799aa405",
+   "id": "822aaafe",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d9633bf7",
+   "id": "af5b71fb",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "97a40fd9",
+   "id": "be07b8b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbadc1b9",
+   "id": "d1ff71b1",
    "metadata": {},
    "source": [
     "Up to this point we have just created the metadata object representing the feature group. However, we haven't saved the feature group in the feature store yet. To do so, we can call the method `insert` on the metadata object created in the cell above."
@@ -716,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "08369103",
+   "id": "b2cc58bb",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d593f62",
+   "id": "bba019a6",
    "metadata": {},
    "source": [
     "#### <span style=\"color:#ff5f27;\">⛳️ Sales Dataset</span>\n",
@@ -756,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64ac1ac4",
+   "id": "b563f3a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "77e0844f",
+   "id": "977a2074",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "db42830b",
+   "id": "f89a7a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "abed4847",
+   "id": "7dc9acbc",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a711d716",
+   "id": "b3502046",
    "metadata": {},
    "source": [
     "When creating a feature group we can also specify a `partition key`. Partition keys help organize the feature data on the file system and improve performances when reading the feature group data. As for the `primary key`, also `partition key` can be a composite one."
@@ -1095,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "531814cb",
+   "id": "d69efa15",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93ac38c",
+   "id": "e41e9bde",
    "metadata": {},
    "source": [
     "You can enable a feature group to be online by setting the `online_enabled` flag to true. \n",
@@ -1147,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f508d8df",
+   "id": "fb666545",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d263ca",
+   "id": "61bcba7f",
    "metadata": {},
    "source": [
     "#### <span style=\"color:#ff5f27;\">⛳️ Exogenous Dataset </span>\n",
@@ -1196,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "256d0ed0",
+   "id": "dc2dd08a",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f818c0c6",
+   "id": "5ebf29ba",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd43fe4",
+   "id": "71d2a0c3",
    "metadata": {},
    "source": [
     "---\n",
@@ -1394,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c99f52d8",
+   "id": "78613162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ad4a6428",
+   "id": "1cb6fc68",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03737cbe",
+   "id": "03a13395",
    "metadata": {},
    "source": [
     "This will also recompute statistics after inserting new data. The new statistics will be saved along the metadata with a new commit time."
@@ -1446,7 +1433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a1e98c6",
+   "id": "309e9cce",
    "metadata": {},
    "source": [
     "---\n",
@@ -1460,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2c70a8d1",
+   "id": "2848a899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fad2e203",
+   "id": "7f2f3aad",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6fce5fc",
+   "id": "11188e1c",
    "metadata": {},
    "source": [
     "---\n",
@@ -1511,7 +1498,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "04718210",
+   "id": "0c4ce5af",
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0c9e397a",
+   "id": "d730a1a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752f25c8",
+   "id": "fb0cc66d",
    "metadata": {},
    "source": [
     "---\n",
@@ -1577,7 +1564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -1591,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
