--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -2,20 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8432191a",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "title: \"Training Datasets\"\n",
-    "date: 2021-02-24\n",
-    "type: technical_note\n",
-    "draft: false\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc587dc9",
+   "id": "cb17ce9a",
    "metadata": {},
    "source": [
     "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 03: Training Data & Feature views</span>\n",
@@ -33,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec59788",
+   "id": "bfd800e2",
    "metadata": {},
    "source": [
     "---\n",
@@ -53,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a1ef190d",
+   "id": "c476817c",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e9aa5c",
+   "id": "b2a54226",
    "metadata": {},
    "source": [
     "---"
@@ -84,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997d01a0",
+   "id": "8ddb3e1b",
    "metadata": {},
    "source": [
     "## <span style=\"color:#ff5f27;\">⚙️ Feature View Creation</span>\n",
@@ -95,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "97963f18",
+   "id": "d96be9e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076c263a",
+   "id": "3b83bbd3",
    "metadata": {},
    "source": [
     "In order to create Feature View we can use `FeatureStore.create_feature_view()` method."
@@ -124,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f50f6e23",
+   "id": "7c55caa1",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89861e34",
+   "id": "81ff4970",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdf032c",
+   "id": "54d4e543",
    "metadata": {},
    "source": [
     "For now `Feature View` is saved in Hopsworks and we can retrieve it using `FeatureStore.get_feature_view()`"
@@ -176,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1d42a5eb",
+   "id": "677f372d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cd85a683",
+   "id": "0fa99980",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2615c864",
+   "id": "0c30c55b",
    "metadata": {},
    "source": [
     "> `FeatureView.preview_feature_vector()` returns a sample of assembled serving vector from online feature store"
@@ -218,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "767b3ca6",
+   "id": "17b95631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5fd4481",
+   "id": "a551ba27",
    "metadata": {},
    "source": [
     "> To get subset of data use `FeatureView.get_batch_data()` "
@@ -236,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f8bc441",
+   "id": "bb4f6a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "643e2193",
+   "id": "94c427e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f9c991cc",
+   "id": "8d8f3d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84281acd",
+   "id": "36a22db9",
    "metadata": {},
    "source": [
     "---\n",
@@ -296,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9c785423",
+   "id": "10bf57d0",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5440a1",
+   "id": "9de98849",
    "metadata": {},
    "source": [
     "### <span style=\"color:#ff5f27;\">🧑🏻‍🔬 Dataset with splits</span>\n",
@@ -346,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "674668fa",
+   "id": "d3140798",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6a673d6b",
+   "id": "2fbb4f74",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab350857",
+   "id": "5389fc66",
    "metadata": {},
    "source": [
     "---\n",
@@ -431,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2b5d3d7e",
+   "id": "12f86f54",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8b2a70c1",
+   "id": "c6052601",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "705a8181",
+   "id": "b8565de1",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1808b74",
+   "id": "345b5c52",
    "metadata": {},
    "source": [
     "---\n",
@@ -725,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5893ec5a",
+   "id": "e77ff2c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9098ff94",
+   "id": "2a59d759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9cdb35f8",
+   "id": "36b2c376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "11b4fd63",
+   "id": "d63d4b82",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "786f77db",
+   "id": "486c4cc0",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8387207e",
+   "id": "8d02c46a",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d223ce",
+   "id": "a8f3cc08",
    "metadata": {},
    "source": [
     "---\n",
@@ -936,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d95b8a55",
+   "id": "cbbc8a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "131cf2c4",
+   "id": "d47a44a2",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bef8853a",
+   "id": "df8fe4b3",
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c96a19",
+   "id": "3f542c1e",
    "metadata": {},
    "source": [
     "---"
@@ -1108,7 +1095,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -1122,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
