[HOPSWORKS-2673] Remove redundant deployment retrieval

--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -377,15 +377,10 @@
     "from hsml.kafka_topic import KafkaTopic\n",
     "\n",
     "kafka_topic = KafkaTopic()\n",
-    "\n",
     "my_logger = InferenceLogger(kafka_topic=kafka_topic, mode=\"ALL\")\n",
     "\n",
     "# Deploy the best version of the model\n",
-    "mnistclassifier = best_model.deploy(inference_logger=my_logger) # To deploy the model using KServe, set serving_tool to KSERVE\n",
-    "\n",
-    "ms = conn.get_model_serving()\n",
-    "\n",
-    "mnistclassifier = ms.get_deployment(mnistclassifier.name)"
+    "mnistclassifier = best_model.deploy(inference_logger=my_logger) # To deploy the model using KServe, set serving_tool to KSERVE\n"
    ]
   },
   {
