--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -195,14 +195,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0c30c55b",
-   "metadata": {},
-   "source": [
-    "> `FeatureView.preview_feature_vector()` returns a sample of assembled serving vector from online feature store"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "17b95631",
@@ -1095,7 +1087,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1109,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
