--- a/notebooks/ml/serving/kserve/torch/mnist/transformer.ipynb
+++ b/notebooks/ml/serving/kserve/torch/mnist/transformer.ipynb
@@ -13,32 +13,11 @@
    "source": [
     "import io\n",
     "import base64\n",
-    "import json\n",
-    "import tornado\n",
     "from typing import List, Dict\n",
     "from PIL import Image\n",
     "import torchvision.transforms as transforms\n",
     "import logging\n",
     "import kserve"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6515f0d",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "logging.basicConfig(level=kserve.constants.KSERVE_LOGLEVEL)\n",
-    "\n",
-    "image_processing = transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize((0.1307,), (0.3081,))\n",
-    "    ])"
    ]
   },
   {
@@ -52,23 +31,6 @@
    },
    "outputs": [],
    "source": [
-    "def image_transform(instance):\n",
-    "    \"\"\"converts the input image of Bytes Array into Tensor\n",
-    "\n",
-    "    Args:\n",
-    "        instance (dict): The request input to make an inference\n",
-    "        request for.\n",
-    "\n",
-    "    Returns:\n",
-    "        list: Returns the data key's value and converts that into a list\n",
-    "        after converting it into a tensor\n",
-    "    \"\"\"\n",
-    "    byte_array = base64.b64decode(instance[\"data\"])\n",
-    "    image = Image.open(io.BytesIO(byte_array))\n",
-    "    instance[\"data\"] = image_processing(image).tolist()\n",
-    "    return instance\n",
-    "\n",
-    "\n",
     "class Transformer(object):\n",
     "    \"\"\" A class object for the data handling activities of Image Classification\n",
     "    Task and returns a KServe compatible response.\n",
@@ -78,7 +40,12 @@
     "        module is passed here.\n",
     "    \"\"\"\n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        logging.basicConfig(level=kserve.constants.KSERVE_LOGLEVEL)\n",
+    "\n",
+    "        self.image_processing = transforms.Compose([\n",
+    "            transforms.ToTensor(),\n",
+    "            transforms.Normalize((0.1307,), (0.3081,))\n",
+    "        ])\n",
     "\n",
     "    def preprocess(self, inputs: Dict) -> Dict:\n",
     "        \"\"\"Pre-process activity of the Image Input data.\n",
@@ -89,7 +56,7 @@
     "        Returns:\n",
     "            Dict: Returns the request input after converting it into a tensor\n",
     "        \"\"\"\n",
-    "        return {'instances': [image_transform(instance) for instance in inputs['instances']]}\n",
+    "        return {'instances': [self.image_transform(instance) for instance in inputs['instances']]}\n",
     "\n",
     "    def postprocess(self, inputs: List) -> List:\n",
     "        \"\"\"Post process function of Torchserve on the KServe side is\n",
@@ -102,7 +69,23 @@
     "            List: If a post process functionality is specified, it converts that into\n",
     "            a list.\n",
     "        \"\"\"\n",
-    "        return inputs"
+    "        return inputs\n",
+    "\n",
+    "    def image_transform(self, instance):\n",
+    "        \"\"\"converts the input image of Bytes Array into Tensor\n",
+    "\n",
+    "        Args:\n",
+    "            instance (dict): The request input to make an inference\n",
+    "            request for.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: Returns the data key's value and converts that into a list\n",
+    "            after converting it into a tensor\n",
+    "        \"\"\"\n",
+    "        byte_array = base64.b64decode(instance[\"data\"])\n",
+    "        image = Image.open(io.BytesIO(byte_array))\n",
+    "        instance[\"data\"] = self.image_processing(image).tolist()\n",
+    "        return instance"
    ]
   }
  ],
