fix comment-add csv data to hops repo

--- a/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "This notebooks guides through the ingestion of Redshift data in the Hopsworks feature store. To follow this notebook users should have an existing Redshift cluster, if not, they can follow the AWS [documentation](https://docs.aws.amazon.com/ses/latest/DeveloperGuide/event-publishing-redshift-cluster.html).\n",
     "\n",
-    "We use the widely used Telco Customer Churn dataset for this tutorial, which is available in CSV format [here](../data/Telco_customer_churn.csv)\n",
+    "We use the widely used Telco Customer Churn dataset for this tutorial, which is available in CSV format [here](https://repo.hops.works/master/hopsworks-tutorials/data/Telco_customer_churn.csv).\n",
     "Users should create the following table in Redshift\n",
     "```sql\n",
     "CREATE TABLE telco(\n",
